[gd_scene load_steps=29 format=2]

[ext_resource path="res://addons/qodot/src/nodes/qodot_map.gd" type="Script" id=1]
[ext_resource path="res://addons/qodot/game_definitions/fgd/qodot_fgd.tres" type="Resource" id=2]
[ext_resource path="res://textures/world/wall.png" type="Texture" id=3]
[ext_resource path="res://textures/world/ground.png" type="Texture" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tiles/hexRedX.png" type="Texture" id=6]
[ext_resource path="res://scripts/Test.gd" type="Script" id=7]
[ext_resource path="res://scenes/map.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/tiles/eyes.png" type="Texture" id=9]
[ext_resource path="res://assets/mixkit-hard-horror-hit-drum-565.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/mixkit-horror-sci-fi-wind-tunnel-894.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/tiles/doorMetal.png" type="Texture" id=12]
[ext_resource path="res://assets/sounds/mixkit-scary-wooden-door-opening-190.ogg" type="AudioStream" id=13]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 3 )

[sub_resource type="ArrayMesh" id=17]
surfaces/0 = {
"aabb": AABB( -14, -1, -9, 26, 1.00001, 19 ),
"array_data": PoolByteArray( 0, 0, 96, 193, 0, 0, 0, 0, 0, 0, 16, 193, 127, 127, 127, 193, 0, 191, 0, 0, 0, 0, 96, 193, 0, 0, 128, 191, 0, 0, 16, 193, 127, 127, 127, 193, 0, 191, 0, 48, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 16, 193, 127, 127, 127, 193, 0, 62, 0, 48, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 16, 193, 127, 127, 127, 193, 0, 62, 0, 0, 0, 0, 96, 193, 0, 0, 0, 0, 0, 0, 16, 193, 129, 0, 0, 63, 128, 188, 0, 0, 0, 0, 96, 193, 0, 0, 0, 0, 0, 0, 32, 65, 129, 0, 0, 63, 0, 61, 0, 0, 0, 0, 96, 193, 0, 0, 128, 191, 0, 0, 32, 65, 129, 0, 0, 63, 0, 61, 0, 48, 0, 0, 96, 193, 0, 0, 128, 191, 0, 0, 16, 193, 129, 0, 0, 63, 128, 188, 0, 48, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 16, 193, 0, 129, 0, 193, 128, 188, 0, 190, 0, 0, 96, 193, 0, 0, 128, 191, 0, 0, 16, 193, 0, 129, 0, 193, 128, 188, 0, 63, 0, 0, 96, 193, 0, 0, 128, 191, 0, 0, 32, 65, 0, 129, 0, 193, 0, 61, 0, 63, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 32, 65, 0, 129, 0, 193, 0, 61, 0, 190, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 16, 193, 0, 127, 0, 63, 128, 188, 0, 190, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 0, 63, 0, 61, 0, 190, 0, 0, 96, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 127, 0, 63, 0, 61, 0, 63, 0, 0, 96, 193, 0, 0, 0, 0, 0, 0, 16, 193, 0, 127, 0, 63, 128, 188, 0, 63, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 16, 193, 127, 0, 0, 193, 128, 188, 0, 0, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 16, 193, 127, 0, 0, 193, 128, 188, 0, 48, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 32, 65, 127, 0, 0, 193, 0, 61, 0, 48, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 32, 65, 127, 0, 0, 193, 0, 61, 0, 0, 0, 0, 96, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 0, 127, 63, 0, 191, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 0, 127, 63, 0, 62, 0, 0, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 32, 65, 0, 0, 127, 63, 0, 62, 0, 48, 0, 0, 96, 193, 0, 0, 128, 191, 0, 0, 32, 65, 0, 0, 127, 63, 0, 191, 0, 48 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": SubResource( 15 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}
surfaces/1 = {
"aabb": AABB( -13, -1, -9, 26, 18, 19 ),
"array_data": PoolByteArray( 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 16, 193, 127, 127, 127, 193, 0, 190, 64, 192, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 16, 193, 127, 127, 127, 193, 0, 190, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 16, 193, 127, 127, 127, 193, 0, 62, 0, 0, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 16, 193, 127, 127, 127, 193, 0, 62, 64, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 16, 193, 129, 0, 0, 63, 128, 189, 64, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 191, 129, 0, 0, 63, 0, 182, 64, 192, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 191, 129, 0, 0, 63, 0, 182, 0, 0, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 16, 193, 129, 0, 0, 63, 128, 189, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 16, 193, 0, 129, 0, 193, 128, 189, 0, 190, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 16, 193, 0, 129, 0, 193, 128, 189, 0, 62, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 0, 193, 0, 182, 0, 62, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 0, 193, 0, 182, 0, 190, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 16, 193, 0, 127, 0, 63, 128, 189, 0, 190, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 191, 0, 127, 0, 63, 0, 182, 0, 190, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 191, 0, 127, 0, 63, 0, 182, 0, 62, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 16, 193, 0, 127, 0, 63, 128, 189, 0, 62, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 16, 193, 127, 0, 0, 193, 128, 189, 64, 192, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 16, 193, 127, 0, 0, 193, 128, 189, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 191, 127, 0, 0, 193, 0, 182, 0, 0, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 191, 127, 0, 0, 193, 0, 182, 64, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 127, 63, 0, 190, 64, 192, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 127, 63, 0, 62, 64, 192, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 127, 63, 0, 62, 0, 0, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 127, 63, 0, 190, 0, 0, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 63, 127, 127, 127, 193, 0, 190, 64, 192, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 63, 127, 127, 127, 193, 0, 190, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 63, 127, 127, 127, 193, 0, 62, 0, 0, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 63, 127, 127, 127, 193, 0, 62, 64, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 63, 129, 0, 0, 63, 0, 184, 64, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 32, 65, 129, 0, 0, 63, 0, 57, 64, 192, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 32, 65, 129, 0, 0, 63, 0, 57, 0, 0, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 63, 129, 0, 0, 63, 0, 184, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 0, 193, 0, 184, 0, 190, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 0, 193, 0, 184, 0, 62, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 129, 0, 193, 0, 57, 0, 62, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 129, 0, 193, 0, 57, 0, 190, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 63, 0, 127, 0, 63, 0, 184, 0, 190, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 32, 65, 0, 127, 0, 63, 0, 57, 0, 190, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 32, 65, 0, 127, 0, 63, 0, 57, 0, 62, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 63, 0, 127, 0, 63, 0, 184, 0, 62, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 63, 127, 0, 0, 193, 0, 184, 64, 192, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 63, 127, 0, 0, 193, 0, 184, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 32, 65, 127, 0, 0, 193, 0, 57, 0, 0, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 32, 65, 127, 0, 0, 193, 0, 57, 64, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 32, 65, 0, 0, 127, 63, 0, 190, 64, 192, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 32, 65, 0, 0, 127, 63, 0, 62, 64, 192, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 32, 65, 0, 0, 127, 63, 0, 62, 0, 0, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 32, 65, 0, 0, 127, 63, 0, 190, 0, 0, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 192, 127, 127, 127, 193, 128, 61, 64, 192, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 128, 192, 127, 127, 127, 193, 128, 61, 0, 48, 0, 0, 80, 65, 0, 0, 128, 191, 0, 0, 128, 192, 127, 127, 127, 193, 0, 62, 0, 48, 0, 0, 80, 65, 0, 0, 136, 65, 0, 0, 128, 192, 127, 127, 127, 193, 0, 62, 64, 192, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 192, 129, 0, 0, 63, 0, 184, 64, 192, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 64, 129, 0, 0, 63, 0, 56, 64, 192, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 128, 64, 129, 0, 0, 63, 0, 56, 0, 48, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 128, 192, 129, 0, 0, 63, 0, 184, 0, 48, 0, 0, 80, 65, 0, 0, 128, 191, 0, 0, 128, 192, 0, 129, 0, 193, 0, 184, 0, 190, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 128, 192, 0, 129, 0, 193, 0, 184, 128, 189, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 128, 64, 0, 129, 0, 193, 0, 56, 128, 189, 0, 0, 80, 65, 0, 0, 128, 191, 0, 0, 128, 64, 0, 129, 0, 193, 0, 56, 0, 190, 0, 0, 80, 65, 0, 0, 136, 65, 0, 0, 128, 192, 0, 127, 0, 63, 0, 184, 0, 190, 0, 0, 80, 65, 0, 0, 136, 65, 0, 0, 128, 64, 0, 127, 0, 63, 0, 56, 0, 190, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 64, 0, 127, 0, 63, 0, 56, 128, 189, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 192, 0, 127, 0, 63, 0, 184, 128, 189, 0, 0, 80, 65, 0, 0, 136, 65, 0, 0, 128, 192, 127, 0, 0, 193, 0, 184, 64, 192, 0, 0, 80, 65, 0, 0, 128, 191, 0, 0, 128, 192, 127, 0, 0, 193, 0, 184, 0, 48, 0, 0, 80, 65, 0, 0, 128, 191, 0, 0, 128, 64, 127, 0, 0, 193, 0, 56, 0, 48, 0, 0, 80, 65, 0, 0, 136, 65, 0, 0, 128, 64, 127, 0, 0, 193, 0, 56, 64, 192, 0, 0, 64, 65, 0, 0, 136, 65, 0, 0, 128, 64, 0, 0, 127, 63, 128, 61, 64, 192, 0, 0, 80, 65, 0, 0, 136, 65, 0, 0, 128, 64, 0, 0, 127, 63, 0, 62, 64, 192, 0, 0, 80, 65, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 127, 63, 0, 62, 0, 48, 0, 0, 64, 65, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 127, 63, 128, 61, 0, 48, 0, 0, 32, 65, 0, 0, 64, 64, 0, 0, 128, 191, 127, 127, 127, 193, 0, 61, 0, 182, 0, 0, 32, 65, 0, 0, 0, 128, 0, 0, 128, 191, 127, 127, 127, 193, 0, 61, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 191, 127, 127, 127, 193, 0, 62, 0, 0, 0, 0, 64, 65, 0, 0, 64, 64, 0, 0, 128, 191, 127, 127, 127, 193, 0, 62, 0, 182, 0, 0, 32, 65, 0, 0, 64, 64, 0, 0, 128, 191, 129, 0, 0, 63, 0, 176, 0, 182, 0, 0, 32, 65, 0, 0, 64, 64, 0, 0, 128, 63, 129, 0, 0, 63, 0, 48, 0, 182, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 128, 63, 129, 0, 0, 63, 0, 48, 0, 0, 0, 0, 32, 65, 0, 0, 0, 128, 0, 0, 128, 191, 129, 0, 0, 63, 0, 176, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 0, 193, 0, 176, 0, 190, 0, 0, 32, 65, 0, 0, 0, 128, 0, 0, 128, 191, 0, 129, 0, 193, 0, 176, 0, 189, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 0, 193, 0, 48, 0, 189, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 0, 193, 0, 48, 0, 190, 0, 0, 64, 65, 0, 0, 64, 64, 0, 0, 128, 191, 0, 127, 0, 63, 0, 176, 0, 190, 0, 0, 64, 65, 0, 0, 64, 64, 0, 0, 128, 63, 0, 127, 0, 63, 0, 48, 0, 190, 0, 0, 32, 65, 0, 0, 64, 64, 0, 0, 128, 63, 0, 127, 0, 63, 0, 48, 0, 189, 0, 0, 32, 65, 0, 0, 64, 64, 0, 0, 128, 191, 0, 127, 0, 63, 0, 176, 0, 189, 0, 0, 64, 65, 0, 0, 64, 64, 0, 0, 128, 191, 127, 0, 0, 193, 0, 176, 0, 182, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 191, 127, 0, 0, 193, 0, 176, 0, 0, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 63, 127, 0, 0, 193, 0, 48, 0, 0, 0, 0, 64, 65, 0, 0, 64, 64, 0, 0, 128, 63, 127, 0, 0, 193, 0, 48, 0, 182, 0, 0, 32, 65, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 127, 63, 0, 61, 0, 182, 0, 0, 64, 65, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 127, 63, 0, 62, 0, 182, 0, 0, 64, 65, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 127, 63, 0, 62, 0, 0, 0, 0, 32, 65, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 127, 63, 0, 61, 0, 0, 0, 0, 80, 193, 0, 0, 136, 65, 0, 0, 128, 191, 127, 127, 127, 193, 64, 190, 32, 192, 0, 0, 80, 193, 0, 0, 0, 0, 0, 0, 128, 191, 127, 127, 127, 193, 64, 190, 0, 44, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 191, 127, 127, 127, 193, 192, 189, 0, 44, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 191, 127, 127, 127, 193, 192, 189, 32, 192, 0, 0, 80, 193, 0, 0, 136, 65, 0, 0, 128, 191, 129, 0, 0, 63, 0, 176, 64, 192, 0, 0, 80, 193, 0, 0, 136, 65, 0, 0, 128, 63, 129, 0, 0, 63, 0, 48, 64, 192, 0, 0, 80, 193, 0, 0, 0, 0, 0, 0, 128, 63, 129, 0, 0, 63, 0, 48, 0, 0, 0, 0, 80, 193, 0, 0, 0, 0, 0, 0, 128, 191, 129, 0, 0, 63, 0, 176, 0, 0, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 0, 193, 0, 176, 0, 62, 0, 0, 80, 193, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 0, 193, 0, 176, 128, 62, 0, 0, 80, 193, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 0, 193, 0, 48, 128, 62, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 0, 193, 0, 48, 0, 62, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 191, 0, 127, 0, 63, 0, 176, 0, 62, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 63, 0, 127, 0, 63, 0, 48, 0, 62, 0, 0, 80, 193, 0, 0, 136, 65, 0, 0, 128, 63, 0, 127, 0, 63, 0, 48, 128, 62, 0, 0, 80, 193, 0, 0, 136, 65, 0, 0, 128, 191, 0, 127, 0, 63, 0, 176, 128, 62, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 191, 127, 0, 0, 193, 0, 176, 64, 192, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 191, 127, 0, 0, 193, 0, 176, 0, 0, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 63, 127, 0, 0, 193, 0, 48, 0, 0, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 63, 127, 0, 0, 193, 0, 48, 64, 192, 0, 0, 80, 193, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 127, 63, 64, 190, 32, 192, 0, 0, 64, 193, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 127, 63, 192, 189, 32, 192, 0, 0, 64, 193, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 127, 63, 192, 189, 0, 44, 0, 0, 80, 193, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 127, 63, 64, 190, 0, 44 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 48, 0, 50, 0, 51, 0, 52, 0, 53, 0, 54, 0, 52, 0, 54, 0, 55, 0, 56, 0, 57, 0, 58, 0, 56, 0, 58, 0, 59, 0, 60, 0, 61, 0, 62, 0, 60, 0, 62, 0, 63, 0, 64, 0, 65, 0, 66, 0, 64, 0, 66, 0, 67, 0, 68, 0, 69, 0, 70, 0, 68, 0, 70, 0, 71, 0, 72, 0, 73, 0, 74, 0, 72, 0, 74, 0, 75, 0, 76, 0, 77, 0, 78, 0, 76, 0, 78, 0, 79, 0, 80, 0, 81, 0, 82, 0, 80, 0, 82, 0, 83, 0, 84, 0, 85, 0, 86, 0, 84, 0, 86, 0, 87, 0, 88, 0, 89, 0, 90, 0, 88, 0, 90, 0, 91, 0, 92, 0, 93, 0, 94, 0, 92, 0, 94, 0, 95, 0, 96, 0, 97, 0, 98, 0, 96, 0, 98, 0, 99, 0, 100, 0, 101, 0, 102, 0, 100, 0, 102, 0, 103, 0, 104, 0, 105, 0, 106, 0, 104, 0, 106, 0, 107, 0, 108, 0, 109, 0, 110, 0, 108, 0, 110, 0, 111, 0, 112, 0, 113, 0, 114, 0, 112, 0, 114, 0, 115, 0, 116, 0, 117, 0, 118, 0, 116, 0, 118, 0, 119, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 180,
"material": SubResource( 16 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 120
}

[sub_resource type="ConvexPolygonShape" id=18]
points = PoolVector3Array( -14, 0, -9, -14, -1, -9, 12, -1, -9, 12, 0, -9, -14, 0, 10, -14, -1, 10, 12, -1, 10, 12, 0, 10 )

[sub_resource type="ConvexPolygonShape" id=19]
points = PoolVector3Array( -12, 17, -9, -12, 0, -9, 12, 0, -9, 12, 17, -9, -12, 17, -1, -12, 0, -1, 12, 0, -1, 12, 17, -1 )

[sub_resource type="ConvexPolygonShape" id=20]
points = PoolVector3Array( -12, 17, 1, -12, 0, 1, 12, 0, 1, 12, 17, 1, -12, 17, 10, -12, 0, 10, 12, 0, 10, 12, 17, 10 )

[sub_resource type="ConvexPolygonShape" id=21]
points = PoolVector3Array( 12, 17, -4, 12, -1, -4, 13, -1, -4, 13, 17, -4, 12, 17, 4, 12, -1, 4, 13, -1, 4, 13, 17, 4 )

[sub_resource type="ConvexPolygonShape" id=22]
points = PoolVector3Array( 10, 3, -1, 10, 0, -1, 12, 0, -1, 12, 3, -1, 10, 3, 1, 10, 0, 1, 12, 0, 1, 12, 3, 1 )

[sub_resource type="ConvexPolygonShape" id=23]
points = PoolVector3Array( -13, 17, -1, -13, 0, -1, -12, 0, -1, -12, 17, -1, -13, 17, 1, -13, 0, 1, -12, 0, 1, -12, 17, 1 )

[sub_resource type="Environment" id=11]
background_mode = 1

[sub_resource type="CapsuleShape" id=12]
radius = 0.383975
height = 0.002

[sub_resource type="SphereShape" id=13]
radius = 5.26559

[sub_resource type="BoxShape" id=14]
extents = Vector3( 0.0798716, 1.75939, 1.01672 )

[sub_resource type="BoxShape" id=24]
extents = Vector3( 1, 1.92108, 1.01926 )

[node name="Test" type="Spatial"]
script = ExtResource( 7 )
map = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.44598, 1.06682, 0 )

[node name="QodotMap" type="Spatial" parent="."]
script = ExtResource( 1 )
map_file = "/home/elise/godot/hexgrid/assets/maps/text.map"
inverse_scale_factor = 16.0
entity_fgd = ExtResource( 2 )
base_texture_dir = "res://textures"
texture_file_extensions = PoolStringArray( "png" )
worldspawn_layers = [  ]
brush_clip_texture = "special/clip"
face_skip_texture = "special/skip"
texture_wads = [  ]
material_file_extension = "tres"
default_material = SubResource( 1 )
uv_unwrap_texel_size = 1.0
print_profiling_data = false
use_trenchbroom_group_hierarchy = false
tree_attach_batch_size = 16
set_owner_batch_size = 16

[node name="entity_0_worldspawn" type="StaticBody" parent="QodotMap"]

[node name="entity_0_mesh_instance" type="MeshInstance" parent="QodotMap/entity_0_worldspawn"]
use_in_baked_light = true
mesh = SubResource( 17 )
material/0 = null
material/1 = null

[node name="entity_0_brush_0_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 18 )

[node name="entity_0_brush_1_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 19 )

[node name="entity_0_brush_2_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 20 )

[node name="entity_0_brush_3_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 21 )

[node name="entity_0_brush_4_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 22 )

[node name="entity_0_brush_5_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 23 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="test_game" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.98176, 2.29885, 0 )

[node name="Sprite3D" type="Sprite3D" parent="test_game"]
shaded = true
double_sided = false
texture = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="test_game"]
shape = SubResource( 12 )

[node name="eyes" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9544, 2.00141, 0 )

[node name="CollisionShape" type="CollisionShape" parent="eyes"]
shape = SubResource( 13 )

[node name="Sprite3D" type="Sprite3D" parent="eyes"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
billboard = 2
shaded = true
double_sided = false
texture = ExtResource( 9 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="eyes"]
stream = ExtResource( 10 )
unit_size = 6.6

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -3.461

[node name="Door" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.9974, 6.38213, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.63079, 0 )
shape = SubResource( 14 )

[node name="Sprite3D" type="Sprite3D" parent="Door"]
transform = Transform( -1.74846e-07, 0, 1, 0, 4, 0, -4, 0, -4.37114e-08, 0, -3.81994, -0.0434762 )
shaded = true
texture = ExtResource( 12 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Door"]
stream = ExtResource( 13 )

[node name="ChangeLevel" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.02925, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="ChangeLevel"]
shape = SubResource( 24 )

[connection signal="body_entered" from="test_game" to="." method="_on_test_game_body_entered"]
[connection signal="body_exited" from="test_game" to="." method="_on_test_game_body_exited"]
[connection signal="body_entered" from="eyes" to="." method="_on_eyes_body_entered"]
[connection signal="finished" from="Door/AudioStreamPlayer3D" to="." method="_on_AudioStreamPlayer3D_finished"]
[connection signal="body_entered" from="ChangeLevel" to="." method="_on_ChangeLevel_body_entered"]
